fix spacing in hero header and navbar

--- a/less/components/hero.less
+++ b/less/components/hero.less
@@ -13,9 +13,8 @@
 
         &__h1 {
             &.tag-line {
-                letter-spacing: 4px;
-                margin-top: 12rem;
-                font-size: 8rem;
+                letter-spacing: 2px;
+                margin-top:8rem;
                 color: @white;
             }
         }
@@ -35,6 +34,12 @@
             }
         }
 
+        .hero__heading{
+            width: 80%; 
+            color:white; 
+            text-align: center; 
+            margin-top: 8rem;
+        }
 
         &--alternative {
             background-image: linear-gradient(
