--- a/less/components/main-header.less
+++ b/less/components/main-header.less
@@ -45,6 +45,7 @@
     background: -webkit-linear-gradient(@neon,@white);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+    margin: 0;
     
       
     }
